--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
       text-align: center;
       margin: 40px 0;
     }
-    .center-button a {
-      text-decoration: none;
-    }
     .center-button button {
       background-color: #000080;
       color: #fff;
@@ -61,15 +58,18 @@
       padding-top: 10px;
     }
   </style>
+  <script>
+    function showPopup() {
+      alert("JK Contact Narco/Frost/etc. on Discord if you want in");
+    }
+  </script>
 </head>
 <body>
   <div class="container">
     <h1>Gibbed Gaming</h1>
     <p>We old now.</p>
     <div class="center-button">
-      <a href="https://discord.gg/YOUR_INVITE_LINK" target="_blank">
-        <button type="button">Join Discord</button>
-      </a>
+      <button type="button" onclick="showPopup()">Join Discord</button>
     </div>
     <div class="footer">
       &copy; 2025 Gibbed Gaming. All rights reserved.
