--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Retro AOL Experience</title>
+  <title>Gibbed Gaming</title>
   <style>
     /* Body and overall layout */
     body {
