--- a/index.html
+++ b/index.html
@@ -2,59 +2,62 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Gibbed Gaming</title>
+  <title>TF2 Fan Page</title>
   <style>
-    /* Body and overall layout */
+    /* Overall page style with a fun, clashing background pattern */
     body {
-      background: linear-gradient(to bottom, #a7c7e7, #f0f8ff);
-      font-family: "Comic Sans MS", "Courier New", cursive;
+      background: repeating-linear-gradient(45deg, #ffcccc, #ffcccc 10px, #ccccff 10px, #ccccff 20px);
+      font-family: "Comic Sans MS", cursive, sans-serif;
       margin: 0;
       padding: 0;
       color: #000;
     }
+    /* Main container with a dashed border and drop shadow */
     .container {
       width: 90%;
       max-width: 800px;
       margin: 50px auto;
       background-color: #fff;
-      border: 4px double #000080;
+      border: 5px dashed #ff0000;
       padding: 20px;
-      box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
+      box-shadow: 10px 10px 5px rgba(0,0,0,0.5);
+      text-align: center;
     }
+    /* Header styling with bold colors and text-shadow for extra flair */
     h1 {
-      text-align: center;
-      font-size: 36px;
-      color: #000080;
-      margin-bottom: 10px;
+      font-size: 48px;
+      color: #0000ff;
+      text-shadow: 2px 2px #ff0000;
+      margin-bottom: 20px;
     }
+    /* Paragraph styling */
     p {
-      text-align: center;
-      font-size: 18px;
-      margin: 20px 0;
+      font-size: 20px;
+      margin-bottom: 20px;
     }
-    /* Centering the join button */
+    /* Centering the button */
     .center-button {
-      text-align: center;
-      margin: 40px 0;
+      margin: 30px 0;
     }
+    /* Button styling reminiscent of a handmade design */
     .center-button button {
-      background-color: #000080;
+      background-color: #ff0000;
       color: #fff;
-      border: 2px outset #fff;
-      padding: 12px 24px;
-      font-size: 18px;
+      border: 3px groove #0000ff;
+      padding: 15px 30px;
+      font-size: 20px;
       cursor: pointer;
+      transition: transform 0.2s;
     }
     .center-button button:hover {
-      background-color: #0000cd;
+      transform: scale(1.1);
     }
     /* Footer styling */
     .footer {
-      text-align: center;
-      font-size: 12px;
-      color: #666;
       margin-top: 40px;
-      border-top: 1px solid #ccc;
+      font-size: 14px;
+      color: #333;
+      border-top: 2px dotted #ff0000;
       padding-top: 10px;
     }
   </style>
