--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>TF2 Fan Page</title>
+  <title>Gibbed Gaming</title>
   <style>
     /* Overall page style with a fun, clashing background pattern */
     body {
